[tool.poetry]
name = "bountyhunter"
version = "0.1.0"
description = ""
authors = ["JoranHonig <JoranHonig@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
toolz = "^0.12.1"
click = "^8.1.7"
rich = "^13.7.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bountyhunter = "bountyhunter.cli.main:main"
